# kbsh

./: .gitignore  AUTHORS  Makefile.am  README  TODO  aclocal.m4  configure.ac
lib/gnulib/: Makefile.am
lib/m4/: gnulib-cache.m4  gnulib-comp.m4
man/: kbsh.1
scripts/kbsh-test/: hello-x100.sh  hello.sh  line-continue.sh  unexpected-eof.sh
src/: Makefile.am  localize.h
src/builtin/: builtin.c  builtin.h  cd.c  exit.c
src/core/: buffer.c  buffer.h  cmdstr.c  cmdstr.h  env.h  file.c  file.h  input.c  input.h  kbsh.c  kbsh.h  main.c  parse.c  parse.h  prompt.c  prompt.h  sig.c  sig.h  var.c  var.h
